# phparser

./: .gitignore  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: tweak-request.md
.github/workflows/: rust.yml
src/: lib.rs  main.rs  pulse.rs
src/definitions/: class.rs  file.rs  function.rs  mod.rs
src/definitions/concerns/: mod.rs
src/lexer/: mod.rs  token.rs
src/parser/: blocks.rs  mod.rs
src/parser/class/: mod.rs
src/parser/file/: mod.rs
src/parser/function/: mod.rs
tests/: lexer_integration.rs  parser_integration.rs
tests/data/: A.php
tests/data/lexer_tests/class_test/: class.php
tests/data/lexer_tests/dependency_test/: use.php
tests/data/lexer_tests/function_test/: fun.php
tests/data/lexer_tests/namespace_test/: namespace.php
tests/data/lexer_tests/use_test/: use.php
tests/data/parse_file_test/: one.php
