[package]
name = "phparser"
version = "0.1.0"
authors = ["SirTheViking <alexhexan22@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"
lazy_static = "1.4.0"
regex = "1"

[dev-dependencies]
logger = { git = "https://github.com/SirTheViking/logger" }